# Skycast

./: .gitignore  CLAUDE.md  README.md  render.yaml
backend/: pyproject.toml
backend/eval/: README.md  baseline-gemini-3.5-flash.json  run_eval.py
backend/eval/cases/: dataset.py
backend/eval/harness/: aggregate.py  baseline.py  checks.py  cost.py  cost_summary.py  deterministic.py  failures.py  grounding.py  instrument.py  judge.py  nrun.py  pricing.py  report.py  stochastic.py  types.py
backend/scripts/: record_decompose_fixtures.py  record_synthesize_fixtures.py
backend/tests/: helpers.py  test_api_query_request.py  test_api_routes.py  test_api_wiring.py  test_conditions.py  test_decompose_fixtures_replay.py  test_eval_baseline.py  test_eval_checks.py  test_eval_cost.py  test_eval_cost_summary.py  test_eval_dataset_grounding.py  test_eval_failures.py  test_eval_grounding.py  test_eval_instrument.py  test_eval_judge.py  test_eval_nrun.py  test_eval_pricing.py  test_eval_report.py  test_eval_stochastic_e2e.py  test_forecast.py  test_helpers.py  test_llm_anthropic_client.py  test_llm_client.py  test_llm_client_conformance.py  test_llm_errors.py  test_llm_fake_client.py  test_llm_gemini_client.py  test_llm_openai_client.py  test_llm_prompt_portability.py  test_llm_usage.py  test_location.py  test_main.py  test_orchestrator_error_mapping.py  test_orchestrator_run_query.py  test_pipeline_data_needs.py  test_pipeline_decompose.py  test_pipeline_errors.py  test_pipeline_execute_result.py  test_pipeline_execute_stage.py  test_pipeline_plan.py  (+23 more)
docs/: sse-contract.md
(+162 files in other folders)
